<resources>
    <string name="app_name">Willy Fog</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Acceder</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="matriculada_en">"Matriculado/a en: "</string>
    <string name="nombre_profile">Nombre: </string>
    <string name="apellidos_profile">Apellidos: </string>
    <string name="numero_documento">Nº Documento: </string>
    <string name="centre_text">Centro:</string>
    <string name="university_text">Universidad: </string>
    <string name="correo_text">Email: </string>
    <string name="app_label">Search</string>
    <string name="search_hint">Search Me</string>
    <string name="search">Search</string>
    <string name="perfil">Perfil</string>
    <string name="buscar">Buscar</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="title_activity_search">Buscador</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>

    <string name="shared_pref_name">com.popokis.willyfogmobile.PREFERENCE_FILE_KEY</string>
    <string name="auth_pref_key">willy_auth</string>
    <string name="public_key_open">open_key_pub</string>
    <string name="user_id">willy_id_token</string>
    <string name="title_activity_notification">NotificationActivity</string>
</resources>
