<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <!--DNI-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/dniTextView"
        android:text="@string/numero_documento"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:typeface="serif" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/document_id_text"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@+id/dniTextView"
        android:typeface="serif" />

    <!--Nombre-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/nombreTextView"
        android:text="@string/nombre_profile"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_below="@+id/dniTextView"
        android:typeface="serif" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/nameTextView"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@+id/nombreTextView"
        android:layout_below="@+id/document_id_text"
        android:typeface="serif" />

    <!--Apellidos-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/apellidosTextView"
        android:text="@string/apellidos_profile"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_below="@+id/nameTextView"
        android:typeface="serif" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/surnameTextView"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@+id/apellidosTextView"
        android:layout_below="@+id/nameTextView"
        android:typeface="serif" />

    <!--Matriculado en-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/matriculada_en"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:id="@+id/auxTextView"
        android:layout_below="@+id/apellidosTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/gradeTextView"
        android:layout_below="@+id/auxTextView"
        android:layout_toEndOf="@+id/nameTextView"
        android:typeface="serif" />

    <!--Centro-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/centreTextView"
        android:text="@string/centre_text"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_below="@+id/gradeTextView"
        android:typeface="serif" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/centre_user_profile"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_below="@+id/centreTextView"/>

    <!--Universidad-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/universityTextView"
        android:text="@string/university_text"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_below="@+id/centre_user_profile"
        android:typeface="serif" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/university_user_profile"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_below="@+id/universityTextView"/>

    <!--Universidad-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/correoTextView"
        android:text="@string/correo_text"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_below="@+id/university_user_profile"
        android:typeface="serif" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email_user_profile"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_below="@+id/correoTextView"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mis peticiones"
        android:id="@+id/request_button"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/email_user_profile" />

</RelativeLayout>